--- a/client/posts/post_show.css
+++ b/client/posts/post_show.css
@@ -1131,7 +1131,7 @@ form {
     resize: none;
     outline: 0;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-		box-shadow: inset 0 0px 0 #dddddd
+		box-shadow: none;
 }
 .frm_textarea_box_wrp {
     position: relative
