--- a/client/posts/post_show.css
+++ b/client/posts/post_show.css
@@ -365,9 +365,7 @@ td p {
     background-color: transparent;
     border: 0
 }
-form {
-    display: none!important
-}
+
 @media screen and (min-width:0\0) and (min-resolution:72dpi) {
     .rich_media_content table {
         table-layout: fixed!important
@@ -2461,6 +2459,83 @@ form {
 .wx_poptips_wrp.pay_reading .toast_content {
     margin-top: 75px
 }
-.test{
-  color:red
+
+/*----post list-----*/
+.post-item-wrap {
+	box-sizing: border-box;
+  padding: 15px 15px 10px 10px;
+  overflow: hidden;
+  height: 85px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+}
+
+.article-image {
+   width: 80px;
+   height: 60px;
+   background-color: #ccc;
+   background-size: cover;
+   background-position: center center;
+   background-repeat: no-repeat;
+   margin-right: 10px;
+   -webkit-flex-shrink: 0;
+   -ms-flex-negative: 0;
+   flex-shrink: 0;
+}
+
+.article-info-wrap {
+ -webkit-box-flex: 1;
+ -webkit-flex: 1;
+ -ms-flex-positive: 1;
+ flex: 1;
+ flex: 1;
+ overflow: hidden;
+}
+.article-info-wrap .post-title {
+ margin: 0px;
+ font-weight: bold;
+ font-size: 16px;
+ line-height: 18px;
+ color: #000;
+ overflow: hidden;
+ text-overflow: ellipsis;
+ white-space: nowrap;
+ word-wrap: normal;
+ margin-bottom: 25px
+}
+.article-info-wrap .author-name {
+ margin: 0;
+ margin-top: 5px;
+ font-size: 12px;
+ line-height: 18px;
+ font-weight: lighter;
+ color: #333;
+}
+.post-item-wrap :after {
+   content: " ";
+   position: absolute;
+   bottom: 0;
+   width: 100%;
+   height: 1px;
+   border-bottom: 1px solid #e2e2e2;
+   -webkit-transform-origin: 0 100%;
+   -ms-transform-origin: 0 100%;
+   transform-origin: 0 100%;
+   -webkit-transform: scaleY(.5);
+   -ms-transform: scaleY(.5);
+   transform: scaleY(.5);
+   left: 10px;
+}
+.edit-post {
+	font-size: 17px;
+}
+.delete-post {
+  font-size: 17px;
+}
+.article-icons {
+	margin-left: 10px;
+	margin-top:-3px
 }
