add autoprefix to post_show.css flexbox

--- a/client/posts/post_show.css
+++ b/client/posts/post_show.css
@@ -2490,11 +2490,10 @@ td p {
 }
 
 .article-info-wrap {
- -webkit-box-flex: 1;
- -webkit-flex: 1;
- -ms-flex-positive: 1;
- flex: 1;
- flex: 1;
+ -webkit-box-flex:1;
+ -webkit-flex:1;
+ -ms-flex:1;
+ flex:1;
  overflow: hidden;
 }
 .article-info-wrap .post-title {
