--- a/client/posts/post_show.css
+++ b/client/posts/post_show.css
@@ -2541,3 +2541,13 @@ td p {
 	margin-left: 10px;
 	margin-top:-3px
 }
+
+/*--------------Post Content Page------------*/
+.tn-Powered-by-XIUMI {
+ margin-top: 0!important;
+ padding-right: 0!important;
+ margin-bottom: 0!important;
+}
+.tn-Powered-by-XIUMI span {
+   line-height: 1.6!important
+}
