--- a/client/posts/post_show.css
+++ b/client/posts/post_show.css
@@ -167,9 +167,9 @@ span.rich_media_meta_nickname {
     padding-left: 10px;
     border-left: 3px solid #dbdbdb
 }
-img {
+/*img {
     height: auto!important
-}
+}*/
 @media(min-device-width:375px) and (max-device-width:667px) and (-webkit-min-device-pixel-ratio:2) {
     .mm_appmsg .rich_media_inner, .mm_appmsg .rich_media_meta, .mm_appmsg .discuss_list, .mm_appmsg .rich_media_extra, .mm_appmsg .title_tips .tips {
         font-size: 17px
@@ -736,321 +736,6 @@ td p {
     display: inline-block;
     -webkit-background-size: 22px auto;
     background-size: 22px auto
-}
-.icon_emotion_single.icon1 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_01278965.png)
-}
-.icon_emotion_single.icon2 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_02278965.png)
-}
-.icon_emotion_single.icon3 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_03278965.png)
-}
-.icon_emotion_single.icon4 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_04278965.png)
-}
-.icon_emotion_single.icon5 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_05278965.png)
-}
-.icon_emotion_single.icon6 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_06278965.png)
-}
-.icon_emotion_single.icon7 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_07278965.png)
-}
-.icon_emotion_single.icon8 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_08278965.png)
-}
-.icon_emotion_single.icon9 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_09278965.png)
-}
-.icon_emotion_single.icon10 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_10278965.png)
-}
-.icon_emotion_single.icon11 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_11278965.png)
-}
-.icon_emotion_single.icon12 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_12278965.png)
-}
-.icon_emotion_single.icon13 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_13278965.png)
-}
-.icon_emotion_single.icon14 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_14278965.png)
-}
-.icon_emotion_single.icon15 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_15278965.png)
-}
-.icon_emotion_single.icon16 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_16278965.png)
-}
-.icon_emotion_single.icon17 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_17278965.png)
-}
-.icon_emotion_single.icon18 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_18278965.png)
-}
-.icon_emotion_single.icon19 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_19278965.png)
-}
-.icon_emotion_single.icon20 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_20278965.png)
-}
-.icon_emotion_single.icon21 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_21278965.png)
-}
-.icon_emotion_single.icon22 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_22278965.png)
-}
-.icon_emotion_single.icon23 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_23278965.png)
-}
-.icon_emotion_single.icon24 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_24278965.png)
-}
-.icon_emotion_single.icon25 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_25278965.png)
-}
-.icon_emotion_single.icon26 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_26278965.png)
-}
-.icon_emotion_single.icon27 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_27278965.png)
-}
-.icon_emotion_single.icon28 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_28278965.png)
-}
-.icon_emotion_single.icon29 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_29278965.png)
-}
-.icon_emotion_single.icon30 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_30278965.png)
-}
-.icon_emotion_single.icon31 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_31278965.png)
-}
-.icon_emotion_single.icon32 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_32278965.png)
-}
-.icon_emotion_single.icon33 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_33278965.png)
-}
-.icon_emotion_single.icon34 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_34278965.png)
-}
-.icon_emotion_single.icon35 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_35278965.png)
-}
-.icon_emotion_single.icon36 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_36278965.png)
-}
-.icon_emotion_single.icon37 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_37278965.png)
-}
-.icon_emotion_single.icon38 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_38278965.png)
-}
-.icon_emotion_single.icon39 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_39278965.png)
-}
-.icon_emotion_single.icon40 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_40278965.png)
-}
-.icon_emotion_single.icon41 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_41278965.png)
-}
-.icon_emotion_single.icon42 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_42278965.png)
-}
-.icon_emotion_single.icon43 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_43278965.png)
-}
-.icon_emotion_single.icon44 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_44278965.png)
-}
-.icon_emotion_single.icon45 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_45278965.png)
-}
-.icon_emotion_single.icon46 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_46278965.png)
-}
-.icon_emotion_single.icon47 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_47278965.png)
-}
-.icon_emotion_single.icon48 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_48278965.png)
-}
-.icon_emotion_single.icon49 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_49278965.png)
-}
-.icon_emotion_single.icon50 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_50278965.png)
-}
-.icon_emotion_single.icon51 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_51278965.png)
-}
-.icon_emotion_single.icon52 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_52278965.png)
-}
-.icon_emotion_single.icon53 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_53278965.png)
-}
-.icon_emotion_single.icon54 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_54278965.png)
-}
-.icon_emotion_single.icon55 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_55278965.png)
-}
-.icon_emotion_single.icon56 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_56278965.png)
-}
-.icon_emotion_single.icon57 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_57278965.png)
-}
-.icon_emotion_single.icon58 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_58278965.png)
-}
-.icon_emotion_single.icon59 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_59278965.png)
-}
-.icon_emotion_single.icon60 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_60278965.png)
-}
-.icon_emotion_single.icon61 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_61278965.png)
-}
-.icon_emotion_single.icon62 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_62278965.png)
-}
-.icon_emotion_single.icon63 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_63278965.png)
-}
-.icon_emotion_single.icon64 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_64278965.png)
-}
-.icon_emotion_single.icon65 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_65278965.png)
-}
-.icon_emotion_single.icon66 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_66278965.png)
-}
-.icon_emotion_single.icon67 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_67278965.png)
-}
-.icon_emotion_single.icon68 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_68278965.png)
-}
-.icon_emotion_single.icon69 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_69278965.png)
-}
-.icon_emotion_single.icon70 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_70278965.png)
-}
-.icon_emotion_single.icon71 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_71278965.png)
-}
-.icon_emotion_single.icon72 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_72278965.png)
-}
-.icon_emotion_single.icon73 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_73278965.png)
-}
-.icon_emotion_single.icon74 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_74278965.png)
-}
-.icon_emotion_single.icon75 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_75278965.png)
-}
-.icon_emotion_single.icon76 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_76278965.png)
-}
-.icon_emotion_single.icon77 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_77278965.png)
-}
-.icon_emotion_single.icon78 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_78278965.png)
-}
-.icon_emotion_single.icon79 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_79278965.png)
-}
-.icon_emotion_single.icon80 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_80278965.png)
-}
-.icon_emotion_single.icon81 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_81278965.png)
-}
-.icon_emotion_single.icon82 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_82278965.png)
-}
-.icon_emotion_single.icon83 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_83278965.png)
-}
-.icon_emotion_single.icon84 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_84278965.png)
-}
-.icon_emotion_single.icon85 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_85278965.png)
-}
-.icon_emotion_single.icon86 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_86278965.png)
-}
-.icon_emotion_single.icon87 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_87278965.png)
-}
-.icon_emotion_single.icon88 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_88278965.png)
-}
-.icon_emotion_single.icon89 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_89278965.png)
-}
-.icon_emotion_single.icon90 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_90278965.png)
-}
-.icon_emotion_single.icon91 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_91278965.png)
-}
-.icon_emotion_single.icon92 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_92278965.png)
-}
-.icon_emotion_single.icon93 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_93278965.png)
-}
-.icon_emotion_single.icon94 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_94278965.png)
-}
-.icon_emotion_single.icon95 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_95278965.png)
-}
-.icon_emotion_single.icon96 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_96278965.png)
-}
-.icon_emotion_single.icon97 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_97278965.png)
-}
-.icon_emotion_single.icon98 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_98278965.png)
-}
-.icon_emotion_single.icon99 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_99278965.png)
-}
-.icon_emotion_single.icon100 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_100278965.png)
-}
-.icon_emotion_single.icon101 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_101278965.png)
-}
-.icon_emotion_single.icon102 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_102278965.png)
-}
-.icon_emotion_single.icon103 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_103278965.png)
-}
-.icon_emotion_single.icon104 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_104278965.png)
-}
-.icon_emotion_single.icon105 {
-    background-image: url(/mmbizwap/zh_CN/htmledition/images/icon/appmsg/emotion/default-skin/Expression@2x_105278965.png)
 }
 .wx_poptips {
     position: fixed;
@@ -2765,16 +2450,17 @@ fieldset{
   justify-content:flex-end
 }
 .comment-icon {
-  margin: 12px;
-  font-size: .8em;
+  margin-top: 15px;
+  margin-right: 16px;
+  font-size: 1.1em;
   background: #3b5998;
   color: #FFF;
   padding: 10px 10px 7px;
-  width:80px;
-  border-radius: 5px;
+  width:100px;
+  border-radius: 20px;
   z-index: 1;
   border:none
 }
 article:first-child {
-  margin-top: 70px;
+  margin-top: 20px;
 }
